--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="lens_color">#82f23c</color>
+    <color name="splash_screen_bg">	#df9812</color>
 </resources>
