--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,10 @@
     <dimen name="sp15">15sp</dimen>
     <dimen name="sp20">20sp</dimen>
     <dimen name="dp150">150dp</dimen>
+    <dimen name="sp30">30sp</dimen>
+    <dimen name="dp1">1dp</dimen>
+    <dimen name="dp20">20dp</dimen>
+    <dimen name="dp250">250dp</dimen>
+    <dimen name="dp2">2dp</dimen>
+    <dimen name="dp300">300dp</dimen>
 </resources>
