--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,5 @@
     <dimen name="dp250">250dp</dimen>
     <dimen name="dp2">2dp</dimen>
     <dimen name="dp300">300dp</dimen>
+    <dimen name="dp5">5dp</dimen>
 </resources>
