--- a/app/src/main/res/layout/logout_dialog.xml
+++ b/app/src/main/res/layout/logout_dialog.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:background="@drawable/input_box_curved"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <TextView
@@ -22,7 +23,8 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp1"
-        android:background="@color/black" />
+        android:background="@color/black"
+        app:layout_constraintTop_toBottomOf="@id/btn_close" />
 
     <TextView
         android:id="@+id/text_confirmation_message"
@@ -43,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="24dp"
         android:background="@color/black"
         android:paddingStart="@dimen/dp10"
         android:paddingEnd="@dimen/dp10"
@@ -59,7 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="24dp"
         android:background="@color/black"
         android:paddingStart="@dimen/dp10"
         android:paddingEnd="@dimen/dp10"
