--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,7 @@
     <dimen name="dp2">2dp</dimen>
     <dimen name="dp300">300dp</dimen>
     <dimen name="dp5">5dp</dimen>
+    <dimen name="dp350">350dp</dimen>
+    <dimen name="dp425">425dp</dimen>
+    <dimen name="dp32">32dp</dimen>
 </resources>
