cupboard  model implemented, user model created, sqlite db user level implementation

--- a/app/src/main/res/menu/base_menu.xml
+++ b/app/src/main/res/menu/base_menu.xml
@@ -4,6 +4,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/menu_profile"
+        android:title="@string/profile"
+        android:enabled="true"/>
+
+    <item
         android:id="@+id/menu_change_password"
         android:title="@string/change_password"
         android:enabled="true"/>
